--- a/ACEMP 2017/paper latex/isie2012_template.tex
+++ b/ACEMP 2017/paper latex/isie2012_template.tex
@@ -1,4 +1,4 @@
-\documentclass[conference,a4paper,twocolumn]{IEEEtran}
+\textit{\documentclass[conference,a4paper,twocolumn]{IEEEtran}
 \usepackage{graphicx}
 \graphicspath{{images/}}
 \DeclareGraphicsExtensions{.png,.jpg,.pdf}
@@ -361,14 +361,25 @@ This method is proposed for IMMD applications where selection of number of inver
 
 It has been shown that, with conventional three-phase connection, injection of third harmonic is impossible, regardless of the winding connection being delta or wye, due to the nature of the three-phase. Therefore, in this paper, an IMMD scheme is proposed such that each stator coil is fed by a separate single-phase bridge inverter.
 
-The conventional connection and the proposed connection are shown in Fig. \ref{fig:rect_circuit}.
+The conventional connection and the proposed connection are shown in Fig. \ref{fig:prop_conn} and Fig. \ref{fig:deneme}.
 
 \begin{figure}[htp]
   \centering
-  \includegraphics[width=8cm]{images/rect_circuit}
-  \caption{Conventional connection and proposed connection  \textbf{\textcolor{red}{cizilecek}}}
-  \label{fig:rect_circuit}
+  \includegraphics[width=8cm]{images/prop_conn}
+  \caption{Conventional connection and proposed connection}
+  \label{fig:prop_conn}
 \end{figure}
+
+
+%\centerline{\subfloat[Case I]\includegraphics[width=8cm]{images/conv_conn}
+%\label{fig:deneme}}
+%\hfil
+%\subfloat[Case II]{\includegraphics[width=8cm]{images/prop_conn}
+%\label{fig:deneme}}
+%\caption{Simulation results}
+%\label{fig:deneme}
+%\end{figure*}
+
 
 The drawbacks of such a connection are as follows: bunları açıkla
 
@@ -466,3 +477,4 @@ H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
 \end{document}
 
 
+}
