--- a/ACEMP 2017/paper latex/isie2012_template.tex
+++ b/ACEMP 2017/paper latex/isie2012_template.tex
@@ -249,11 +249,11 @@ i_b(t) = I_1sin(2\pi ft-2\pi/3-\phi_{1i})+I_3sin(6\pi ft-\phi_{3i})
 i_c(t) = I_1sin(2\pi ft-4\pi/3-\phi_{1i})+I_3sin(6\pi ft-\phi_{3i})
 \end{equation}
 
-Let us make the definitions shown in \ref{eq:7}-\ref{eq:14}, where v denotes voltage, i denotes current, k denotes fundamental component and l denotes third harmonic component.
-\begin{equation} \label{eq:7}
+Let us make the definitions shown in \ref{eq:def1}-\ref{eq:def2}, where v denotes voltage, i denotes current, k denotes fundamental component and l denotes third harmonic component.
+\begin{equation} \label{eq:def1}
 \phi_{kl-p} = \phi_{kv}+\phi_{li}
 \end{equation}
-\begin{equation} \label{eq:8}
+\begin{equation} \label{eq:def2}
 \phi_{kl-n} = \phi_{kv}+\phi_{li}
 \end{equation}
 
@@ -279,10 +279,10 @@ Let us make the definitions shown in \ref{eq:7}-\ref{eq:14}, where v denotes vol
 \fi
 
 
-The instantaneous power expression for each phase are shown in \ref{eq:15}-\ref{eq:17}.
+The instantaneous power expression for each phase are shown in \ref{eq:pa}-\ref{eq:pc}.
 
 \begin{equation}
-\label{eq:15}
+\label{eq:pa}
 \begin{multlined}
 p_a(t) = 
 \frac{V_1I_1}{2} \bigg \lbrack cos(\phi_{11n})-cos(4\pi ft-\phi_{11p}) \bigg \rbrack
@@ -299,7 +299,7 @@ p_a(t) =
 \end{equation}
 
 \begin{equation}
-\label{eq:16}
+\label{eq:pb}
 \begin{multlined}
 p_b(t) = 
 \frac{V_1I_1}{2} \bigg \lbrack cos(\phi_{11n})-cos(4\pi ft-4\pi/3-\phi_{11p}) \bigg \rbrack
@@ -316,7 +316,7 @@ p_b(t) =
 \end{equation}
 
 \begin{equation}
-\label{eq:17}
+\label{eq:pc}
 \begin{multlined}
 p_c(t) = 
 \frac{V_1I_1}{2} \bigg \lbrack cos(\phi_{11n})-cos(4\pi ft-8\pi/3-\phi_{11p}) \bigg \rbrack
@@ -332,10 +332,10 @@ p_c(t) =
 \end{multlined}
 \end{equation}
 
-The total instantaneous power becomes as in \ref{eq:18}. As seen, all the frequency components which are two times and four times the fundamental frequency are cancelled, leaving two DC components and a component at six times the fundamental frequency. The last term will be used in this method for the cancellation of the sixth harmonic injected by the rectifier.
+The total instantaneous power becomes as in \ref{eq:pt}. As seen, all the frequency components which are two times and four times the fundamental frequency are cancelled, leaving two DC components and a component at six times the fundamental frequency. The last term will be used in this method for the cancellation of the sixth harmonic injected by the rectifier.
 
 \begin{equation}
-\label{eq:18}
+\label{eq:pt}
 \begin{multlined}
 p_{total}(t) = 
 \frac{V_1I_1}{2} \bigg \lbrack cos(\phi_{11n}) \bigg \rbrack
@@ -349,18 +349,18 @@ p_{total}(t) =
 
 \section{Implementation of the method and practical issues}
 
-This method is proposed for IMMD applications where selection of number of inverter modules, number of stator phases etc. are flexible. This makes the application of the method more convenient. In this paper, a \textbf{\textcolor{red}{six}} pole machine is considered. The schematic of the segmented stator and modular inverters is shown in Fig. \ref{fig:rect_circuit}. 
+This method is proposed for IMMD applications where selection of number of inverter modules, number of stator phases etc. are flexible. This makes the application of the method more convenient. In this paper, a machine with 4 pole paris is considered. The schematic of the segmented stator and modular inverters is shown in Fig. \ref{fig:segmented}. 
 
 \begin{figure}[htp]
   \centering
   \includegraphics[width=8cm]{images/rect_circuit}
-  \caption{IMMD scheme  \textbf{\textcolor{red}{cizilecek}}}
-  \label{fig:rect_circuit}
+  \caption{The schematic of the segmented stator and modular inverters}
+  \label{fig:segmented}
 \end{figure}
 
 It has been shown that, with conventional three-phase connection, injection of third harmonic is impossible, regardless of the winding connection being delta or wye, due to the nature of the three-phase. Therefore, in this paper, an IMMD scheme is proposed such that each stator coil is fed by a separate single-phase bridge inverter.
 
-The conventional connection and the proposed connection are shown in Fig. \ref{fig:conv_conn}.
+The conventional connection and the proposed connection are shown in Fig. \ref{fig:conv_conn}, for only one pole pair.
 
 %\begin{figure}[htp]
 %  \centering
@@ -373,12 +373,12 @@ The conventional connection and the proposed connection are shown in Fig. \ref{f
 \centering
 \subfigure[]{\includegraphics[width=2.5in]{conv_conn}\label{conv_conn}} \hfil 
 \subfigure[]{\includegraphics[width=2.5in]{prop_conn}\label{prop_conn}}
-\caption{Inverter schematic a)Conventional, b)Proposed.} 
+\caption{Inverter schematic a) Conventional, b) Proposed.} 
 \label{fig:conv_conn} 
 \end{figure}
 
-The drawbacks of such a connection are as follows: bunları açıkla
-
+The drawbacks of such a connection are as follows: 
+\todo[inline]{bunlari acikla}
 \begin{enumerate}
   \item Increased number of switches: cost, açıkla
   \item Conduction loss, switching loss
@@ -386,27 +386,25 @@ The drawbacks of such a connection are as follows: bunları açıkla
   \item Torque ripple
 \end{enumerate}
 
-Additional advantages: bunları açıkla
+Additional advantages:
+\todo[inline]{bunlari acikla}
 \begin{enumerate}
   \item Increased modularity
   \item Conduction loss, switching loss
 \end{enumerate}
 
-New IMMD scheme for third harmonic injection, practical considerations
+\todo[inline]{DC linkte paralel bağlandığını söyle}
 
-Give the block diagram and the modular structure with split windings at a separate diagram
-
-DC linkte paralel bağlandığını söyle
-
+\todo[inline]{
 Effect on torque ripple
 The discussion on the elimination of the harmonic when there is no third space harmonic
 A method can be developed to eliminate the third space harmonic
-
+}
 
 \section{Results}
 Simulation results
 
-Give the parameters, specifications
+\todo[inline]{Give the parameters, specifications}
 \begin{itemize}
   \item Total output power
   \item Switching frequency
@@ -419,15 +417,16 @@ Give the parameters, specifications
 \end{itemize}
 
 1. The rectifier output current, the inverter input current, and DC link capacitor current at the same figure are shown in Fig. \ref{fig:sample}.
-\begin{figure}[htp]
+\begin{figure}[h]
   \centering
   \includegraphics[width=8cm]{images/sample}
   \caption{The rectifier output current, the inverter input current, and DC link capacitor current  \textbf{\textcolor{red}{elde edilecek}}}
   \label{fig:sample}
 \end{figure}
+
 2. DC link capacitor current in a separate figure, with the method and without the method are shown in Fig. \ref{fig:sample}.
 
-\begin{figure}[htp]
+\begin{figure}[h]
   \centering
   \includegraphics[width=8cm]{images/sample}
   \caption{DC link capacitor current in a separate figure, with the method and without the method  \textbf{\textcolor{red}{elde edilecek}}}
